--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1300px;
   margin: 0 auto 200px auto;
 }
 
@@ -85,6 +85,133 @@ nav button {
     height: 150px;
     border-radius: 50%;
     border: none;
+    cursor: pointer;
+  }
+}
+
+/* 伴奏 */
+
+.time-signature {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+
+  margin: 20px 0;
+
+  input {
+    width: 70px;
+    padding: 10px;
+  }
+
+  button {
+    padding: 10px 20px;
+    cursor: pointer;
+    margin: 20px 0;
+  }
+}
+
+.measures-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin: 20px 0;
+}
+
+.measure-block {
+  border: 1px solid #ccc;
+  padding: 5px;
+  border-radius: 8px;
+}
+
+.measure-block.selected {
+  border-color: #007bff;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+.measure-header {
+  margin-bottom: 10px;
+}
+
+.measure-header label {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  cursor: pointer;
+}
+
+.chord-inputs {
+  display: flex;
+  gap: 5px;
+}
+
+.chord-inputs input {
+  width: 72px;
+  padding: 5px;
+  border: 1px solid #eee;
+  border-radius: 4px;
+}
+
+.measure-actions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+
+  select {
+    padding: 10px;
+  }
+
+  button {
+    padding: 10px 20px;
+    cursor: pointer;
+  }
+}
+
+.file-operations {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+
+  button {
+    padding: 10px 20px;
+    cursor: pointer;
+  }
+}
+
+.transpose-control {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+
+  select {
+    padding: 10px;
+  }
+}
+
+.loop-control {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+
+  input {
+    padding: 10px;
+  }
+}
+
+.playback-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+
+  button {
+    padding: 10px 20px;
     cursor: pointer;
   }
 }
