--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,14 @@ nav button {
   }
 }
 
+.sentence {
+  p {
+    padding: 10px 0;
+  }
+  li {
+    margin: 0 0 0 20px;
+  }
+}
 /* 伴奏 */
 
 .time-signature {
@@ -214,4 +222,36 @@ nav button {
     padding: 10px 20px;
     cursor: pointer;
   }
+}
+
+/* コード・ポジション */
+
+.code-position {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.code-position div {
+  background-color: #eee;
+  color: #121212;
+  box-sizing: border-box;
+  flex-basis: calc(100% / 4);
+  margin-bottom: 20px;
+}
+
+.code-position-caged {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.code-position-caged div {
+  background-color: #eee;
+  color: #121212;
+  box-sizing: border-box;
+  flex-basis: calc(100% / 3);
+  margin-bottom: 20px;
 }
