--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@ h1 {
   font-size: 1.5rem;
 }
 
+.center {
+  text-align: center;
+}
+
 nav {
   display: flex;
   justify-content: center;
@@ -97,8 +101,8 @@ nav button {
     margin: 0 0 0 20px;
   }
 }
-/* 伴奏 */
 
+/* 伴奏 */
 .time-signature {
   display: flex;
   justify-content: center;
@@ -225,33 +229,20 @@ nav button {
 }
 
 /* コード・ポジション */
-
 .code-position {
   max-width: 1200px;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
 
 .code-position div {
   background-color: #eee;
   color: #121212;
   box-sizing: border-box;
-  flex-basis: calc(100% / 4);
+  width: 300px;
   margin-bottom: 20px;
-}
-
-.code-position-caged {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.code-position-caged div {
-  background-color: #eee;
-  color: #121212;
-  box-sizing: border-box;
-  flex-basis: calc(100% / 3);
-  margin-bottom: 20px;
+  border-radius: 10px;
 }
