--- a/src/index.css
+++ b/src/index.css
@@ -394,3 +394,22 @@ nav select {
     cursor: pointer;
   }
 }
+
+/* FingerboardNotes */
+.FingerboardNotes-controls {
+  text-align: center;
+
+  button {
+    margin: 20px 0;
+    padding: 10px 20px;
+    cursor: pointer;
+  }
+}
+
+.FingerboardNotes-answer {
+  text-align: center;
+  span {
+    font-weight: bold;
+    font-size: 5rem;
+  }
+}
